[project]
name = "market-maker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chex>=0.1.92",
    "flax>=0.12.7",
    "gymnax>=0.0.9",
    "ipykernel>=7.3.0",
    "jax>=0.10.2",
    "jaxlib>=0.10.2",
    "marimo>=0.23.10",
    "matplotlib>=3.11.0",
    "nbformat>=5.10.4",
    "numpy>=2.5.0",
    "optax>=0.2.8",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
]
